--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mobile
 description: A mobile application platform for tertiary students to communicate, collaborate and share ideas with each other.
 publish_to: 'none'
-version: 0.0.1-alpha+2
+version: 0.0.1-alpha+3
 
 environment:
   sdk: ">=3.0.3 <4.0.0"
@@ -77,12 +77,11 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.0
   flutter_native_splash:
   mocktail: ^0.3.0
+  bloc_test: ^9.1.3
   change_app_package_name: ^1.1.0
   envied_generator: ^0.3.0+3
   copy_with_extension_gen:
   lints: ^2.0.0
-#  integration_test:
-#    sdk: flutter
 
 flutter:
   uses-material-design: true
