Remove redundant common repository and Cubit
Deleted redundant `common.dart` in `common/data/repositories` and `common/domain/repositories`. Also, removed `common_cubit.dart` from `common/presentation/manager` which were not required anymore. Added a new microservice Dockerfile for notification, generated relevant files for Firebase configuration for macOS. Also, added new global values in common/presentation and files for new implementation of notifications which includes registering, unregistering of device and handlers for foreground and background notifications. Finally, updated the `env.g.dart` file for new environment changes.

The changes are reflecting the shift from common repository having unused functionalities to a more specific implementation for notification handling in the application. With the inclusion of Firebase in macOS, better support and functionalities can be expected. Also, the change includes handling of app's behavior when on foreground and when on background making the notification feature more robust and effective to use. As the env values are also updated, it ensures application is ready to accommodate the changes made wrt notifications handling.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,11 @@ dependencies:
   dartz: ^0.10.1
   lottie: ^2.3.2
   google_fonts: ^4.0.3
-  flutter_secure_storage:
   device_info_plus: ^9.0.3
   shared_utils:
     git: https://github.com/quabynah-bilson/shared_utils.git
+  api_utils:
+    git: https://github.com/quabynah-bilson/api_utils.git
   intl: any
   local_auth: ^2.1.6
   flutter_dotenv: ^5.0.2
@@ -80,6 +81,8 @@ dependencies:
   wakelock_windows: any
   firebase_messaging: ^14.6.8
   fixnum: ^1.1.0
+  flutter_secure_storage: 8.1.0
+  ffi: ^2.1.0
 
 dev_dependencies:
   flutter_test:
