Add 'redacted' package to pubspec.yaml
The 'redacted' package was added to the mobile app dependencies as it is required for masking and unmasking sensitive information. This is particularly important to secure the user data throughout the debug print statements and logs.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   fixnum: ^1.1.0
   flutter_secure_storage: 8.1.0
   ffi: ^2.1.0
+  redacted: ^1.0.10
 
 dev_dependencies:
   flutter_test:
