--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependency_overrides:
   http: ^0.13.3
   google_fonts: ^5.1.0
   intl: ^0.18.0
-  win32: ^3.0.0
+  win32: ^5.4.0
   protobuf: ^3.0.0
 
 dependencies:
@@ -29,11 +29,11 @@ dependencies:
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   modal_bottom_sheet: ^3.0.0-pre
-  pinput: ^3.0.0
+  pinput: ^4.0.0
   dartz: ^0.10.1
-  lottie: ^2.3.2
+  lottie: ^3.1.1
   google_fonts: ^4.0.3
-  device_info_plus: ^9.0.3
+  device_info_plus: ^10.1.0
   shared_utils:
     git: https://github.com/quabynah-bilson/shared_utils.git
   api_utils:
@@ -44,51 +44,52 @@ dependencies:
   url_launcher: ^6.1.10
   animated_bottom_navigation_bar: ^1.2.0
   google_maps_webservice: ^0.0.19
-  geolocator: ^10.0.0
-  sentry_flutter: ^7.6.1
+  geolocator: ^11.0.0
+  sentry_flutter: ^8.2.0
   geocoding:
-  package_info_plus: ^4.1.0
+  package_info_plus: ^8.0.0
   geofence_service: ^5.0.0
-  flutter_local_notifications: ^15.1.0+1
-  webview_flutter_plus: ^0.3.0+2
+  flutter_local_notifications: ^17.1.2
+  webview_flutter_plus: ^0.4.5
   flutter_staggered_animations: ^1.1.1
   flutter_staggered_grid_view: ^0.7.0
   image_picker: ^1.0.2
   image_cropper: ^5.0.0
   timeago: ^3.4.0
-  share_plus: ^7.0.1
-  envied: ^0.3.0+3
+  share_plus: ^9.0.0
+  envied: ^0.5.4+1
   flutter_svg:
   tinycolor2: ^3.0.1
   flutter_highlight: ^0.7.0
   flutter_facebook_auth: ^6.0.1
-  sign_in_with_apple: ^5.0.0
+  sign_in_with_apple: ^6.1.0
   google_sign_in: ^6.1.0
   firebase_core: ^2.12.0
   flutter_config: ^2.0.0
   copy_with_extension: ^5.0.2
-  uuid: ^3.0.7
+  uuid: ^4.4.0
   badges: ^3.1.1
-  heroicons: ^0.9.0
+  heroicons: ^0.10.0
   flutter_jailbreak_detection: ^1.10.0
   dotted_border: ^2.0.0+3
-  connectivity_plus: ^4.0.1
+  connectivity_plus: ^6.0.3
   cached_network_image: ^3.2.3
   hive_flutter: ^2.0.0-dev
   wakelock: ^0.6.2
   zego_uikit: ^2.9.1
-  zego_uikit_prebuilt_call: ^3.12.1
+  zego_uikit_prebuilt_call: ^4.9.0
   wakelock_windows: any
   firebase_messaging: ^14.6.8
   fixnum: ^1.1.0
-  flutter_secure_storage: 8.1.0
+  flutter_secure_storage: ^9.1.1
   ffi: ^2.1.0
   redacted: ^1.0.10
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   build_runner: ^2.4.4
   injectable_generator: ^2.1.5
   flutter_launcher_icons: ^0.13.0
@@ -96,9 +97,9 @@ dev_dependencies:
   mocktail: ^1.0.0
   bloc_test: ^9.1.3
   change_app_package_name: ^1.1.0
-  envied_generator: ^0.3.0+3
+  envied_generator: ^0.5.4+1
   copy_with_extension_gen:
-  lints: ^2.0.0
+  lints: ^4.0.0
 
 flutter:
   uses-material-design: true
